Add header and download link

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Excursion App</title>
-    <link rel="stylesheet" href="resources/css/style.css">
+  <meta charset="UTF-8">
+  <title>Excursion</title>
+  <link rel="stylesheet" href="resources/css/style.css">
 </head>
 
 <body>
-    <h1>Excursion</h1>
-    <p>Record and share your experiences with the Excursion app!</p>
+  <h1>Discover hidden places in the world around you</h1>
+  <a href="#">Download Excursion (Coming soon!)</a>
 </body>
+
 </html>
