--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -7,8 +7,31 @@
 </head>
 
 <body>
+  
   <h1>Discover hidden places in the world around you</h1>
   <a href="#">Download Excursion (Coming soon!)</a>
+ 
+  <p>
+    <video autoplay muted loop>
+      <source src="resources/videos/excursion.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </p>
+
+  <h2>Your personal travel guide</h2>
+  <p>
+    Excursion remembers places you like, and recommends new points of interest around you.
+  </p> 
+  
+<p>
+  <img src="resources/images/camp.webp" alt="Landscape">
+</p>
+
+<p>
+  <img src="resources/images/phone.png" alt="Cellphone icon">
+</p>
+
 </body>
 
 </html>
+
