--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 </head>
 
 <body>
-  
+  <!-- Header -->
   <h1>Discover hidden places in the world around you</h1>
   <a href="#">Download Excursion (Coming soon!)</a>
- 
+
+  <!-- Video Section -->
   <p>
     <video autoplay muted loop>
       <source src="resources/videos/excursion.mp4" type="video/mp4">
@@ -18,20 +19,28 @@
     </video>
   </p>
 
+  <!-- Supporting Text -->
   <h2>Your personal travel guide</h2>
   <p>
     Excursion remembers places you like, and recommends new points of interest around you.
-  </p> 
-  
-<p>
-  <img src="resources/images/camp.webp" alt="Landscape">
-</p>
+  </p>
 
-<p>
-  <img src="resources/images/phone.png" alt="Cellphone icon">
-</p>
+  <!-- Images -->
+  <p>
+    <img class="landscape" src="resources/images/camp.webp" alt="Landscape">
+  </p>
+  <p>
+    <img class="icon" src="resources/images/phone.png" alt="Cellphone icon">
+  </p>
+
+  <!-- Footer -->
+  <footer>
+    <p>
+      &copy; 2026 Excursion App. | 
+      <a href="#">Privacy Policy</a> | 
+      <a href="#">Terms of Service</a>
+    </p>
+  </footer>
 
 </body>
-
 </html>
-
